# octo

./: .replit  LICENSE  README.md  allergies.csv  csv_import.js  medical_history_rows.sql  package-lock.json  package.json  package.json.backup  patient_import_data.json  pyproject.toml  replit.md  tailwind.config.ts
ai_backend/: ai_agent.py  billing_automation.py  ehr_integrations.py  insurance_processor.py  main.py  notification_service.py
attached_assets/: Pasted--Drop-in-correct-dependency-order-DROP-TABLE-IF-EXISTS-ai-messages-CASCADE-DROP-TABLE-IF-EXISTS-1755589200062_1755589200064.txt  Pasted--Patients-master-table-CREATE-TABLE-patients-patient-id-BIGSERIAL-PRIMARY-KEY-first--1755590114444_1755590114445.txt  patients_1755620198932.csv
client/src/: App.tsx  index.css
client/src/components/: ai-dashboard.tsx  appointment-list.tsx  ehr-patient-replacement.tsx  header.tsx  metric-card.tsx  overview-chart.tsx  patient-scheduling.tsx  patient-table.tsx  sidebar.tsx
client/src/components/modals/: ai-assistant-modal.tsx  appointment-detail-modal.tsx  create-appointment-modal.tsx  create-invoice-modal.tsx  create-modal.tsx  create-patient-modal.tsx  create-report-modal.tsx  ehr-sync-modal.tsx  (+6 more)
client/src/lib/: queryClient.ts
client/src/pages/: agent-dashboard.tsx  ai-agent-chat.tsx  aiAgentChat.tsx  appointments.tsx  billing.tsx  dashboard.tsx  ehr-patients.tsx  messages.tsx  patients.tsx  settings.tsx  transactions.tsx
server/: ai-agent-deepseek.ts  ai-analytics.ts  ai-routes.ts  ehr-service.ts  routes.ts  storage-old.ts  storage.ts
shared/: schema.ts
